--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,66 @@
-.App {
-  text-align: center;
+:root {
+  --red: #b00;
+  --blue: #00b;
+  --fullwidth: 100%;
+}
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+code {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+    monospace;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
+.navbar {
+  display: flex;
+  width: 16%;
+
+  border-bottom: 3px solid #e6dae6;
+  flex-direction: row;
+
 }
 
-.App-header {
-  min-height: 100vh;
+.navbar_list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+}
+
+li {
+  list-style-type: none;
+  text-decoration: none;
+  padding: 0;
+  margin: 0;
+   display: flex;
+   flex-direction: row;
+ margin: 15px;
+}
+a {
+  text-decoration: none;
+  color: #6a097d;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  opacity: 0.60;
+  flex-direction: row;
 }
-
-.App-link {
-  color: rgb(112, 76, 182);
+a h3 {
+  display: none;
+  font-size: 15px;
+  padding-left: 10px;
 }
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px)
-  }
-  100% {
-    transform: translateY(0px)
-  }
+.active-link h3 {
+  display: flex;
+}
+.active-link {
+ opacity: 1;
 }
