--- a/src/App.css
+++ b/src/App.css
@@ -21,8 +21,7 @@ code {
   display: flex;
   width: 16%;
 
-  border-bottom: 3px solid #e6dae6;
-  flex-direction: row;
+  flex-direction: column;
 
 }
 
@@ -31,7 +30,9 @@ code {
   margin: 0;
   padding: 0;
   display: flex;
-  flex-direction: row;
+  flex-direction: row; 
+  border-bottom: 3px solid #e6dae6;
+ 
 }
 
 li {
@@ -63,4 +64,8 @@ a h3 {
 }
 .active-link {
  opacity: 1;
+}
+
+.closed{
+  visibility: hidden;
 }
